# LLM101

./: .gitignore  README.md  pyproject.toml  test.ipynb
huggingface_101/: finetuning.ipynb
langchain_chainlit_101/: chainlit_app.py  llamaindex_test.py
llm101/: chainlit_app.py  demo.py  dialog_chain.py  langchain_test.py
llm101/.chainlit/: config.toml
mlartifacts/129880764550986993/3917345073a84e288280c742475bc6f5/artifacts/breast_cancer_model/: MLmodel  conda.yaml  input_example.json  model.pkl
mlartifacts/129880764550986993/bec972d77e7941b3b364aa35ebe3dccf/artifacts/iris_model/: MLmodel
mlops_101/: test_mlflow.ipynb
mlruns/0/: meta.yaml
mlruns/129880764550986993/: meta.yaml
mlruns/129880764550986993/3917345073a84e288280c742475bc6f5/: meta.yaml
mlruns/129880764550986993/3917345073a84e288280c742475bc6f5/metrics/: accuracy
mlruns/129880764550986993/3917345073a84e288280c742475bc6f5/tags/: Training Info  mlflow.log-model.history  mlflow.runName
mlruns/129880764550986993/bec972d77e7941b3b364aa35ebe3dccf/: meta.yaml
mlruns/129880764550986993/bec972d77e7941b3b364aa35ebe3dccf/metrics/: accuracy
mlruns/129880764550986993/bec972d77e7941b3b364aa35ebe3dccf/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/models/tracking-quickstart/: meta.yaml
mlruns/models/tracking-quickstart/version-1/: meta.yaml
mlruns/models/tracking-quickstart/version-2/: meta.yaml
nlp_101/: hf_finetuning.ipynb  hf_inference_pipelines.py  test_llama3.py
(+1 files in other folders)
