[tool.poetry]
name = "llm101"
version = "0.1.0"
description = "Beginner building first LLM app"
authors = ["bpugnaire"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
huggingface-hub = "0.22.2"
chainlit = "^0.7.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
llama-index = "^0.8.45.post1"
llama-cpp-python = "^0.2.11"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
mlx = "^0.11.0"
transformers = "4.40.0"
torch = "^2.2.2"
accelerate = "^0.29.3"
bitsandbytes = "0.42"
datasets = "^2.19.0"
ipywidgets = "^8.1.2"
evaluate = "^0.4.1"
scikit-learn = "^1.4.2"
bertopic = "^0.16.1"
nbformat = "^5.10.4"
mlflow = "^2.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
